# MATFP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ma_format.ma
cmake/: DownloadProject.CMakeLists.cmake.in  FindLIBIGL.cmake  MATFPDependencies.cmake  MATFPDownloadExternal.cmake  Warnings.cmake  geogram.cmake
include/matfp/: Args.h  DisableWarnings.h  EnableWarnings.h  Exception.h  Logger.h  LoggerFormatter.h
input/mesh/: mesh_00000020_ad34a3f60c4a4caa99646600_trimesh_000.geogram  mesh_00000068_767e4372b5f94a88a7a17d90_trimesh_009.geogram  mesh_00000077_767e4372b5f94a88a7a17d90_trimesh_018.geogram  mesh_00000125_e18c7feacfb54f3880659b43_trimesh_000.geogram  mesh_00000129_e18c7feacfb54f3880659b43_trimesh_004.geogram  mesh_00000168_bfdc19149a8b4e72b3d0f5c5_trimesh_000.geogram  mesh_00000272_648a7c23a21f4e88bf25ffeb_trimesh_000.geogram  mesh_00000329_12a935cd9b684f879c0505fe_trimesh_000.geogram  mesh_00000801_ad6107d9fc994ccca38cc4e4_trimesh_003.geogram  mesh_00000802_ad6107d9fc994ccca38cc4e4_trimesh_004.geogram  mesh_00001029_cde47df6e28543d1b434f206_trimesh_001.geogram  mesh_69058.geogram  mesh_bear.geogram
models/: 69058.stl  bear.off
src/: main.cpp
src/matfp/: AABBWrapper.cpp  AABBWrapper.h  Common.cpp  Common.h  FeaturePreservation.cpp  FeaturePreservation.h  GuiWindow.cpp  GuiWindow.h  InscribedSpheres.cpp  InscribedSpheres.h  InternalFeatureAddition.cpp  InternalFeatureAddition.h  IterateSpheres.cpp  IterateSpheres.h  LFS.cpp  LFS.h  Logger.cpp  MedialMeshGenerator.cpp  MedialMeshGenerator.h  MedialSpheresProcessor.cpp  MedialSpheresProcessor.h  MeshFeatureProcessor.cpp  MeshFeatureProcessor.h  MeshIO.cpp  MeshIO.h  MeshProcessor.cpp  MeshProcessor.h  Parameters.h  RPDGenerator.cpp  RPDGenerator.h  ShrinkSpheres.cpp  ShrinkSpheres.h  Thinning.cpp  Thinning.h  ThreeDimensionalShape.cpp  ThreeDimensionalShape.h  Triangulation.cpp  Triangulation.h  UpdateSpheres.cpp  UpdateSpheres.h  (+2 more)
src/matfp/GeometryObjects/: GeometryObjects.cpp  GeometryObjects.h
src/matfp/LinearAlgebra/: Wm4Math.h  Wm4Matrix.h  Wm4Vector.cpp  Wm4Vector.h
src/matfp/NonManifoldMesh/: Nonmanifoldmesh.cpp  Nonmanifoldmesh.h  Primitives.cpp  Primitives.h
src/matfp/Types/: CommonTypes.h  DelaunayTriangulation.h  OtherTypes.cpp  OtherTypes.h  RegularTriangulation.h
src/matfp/geogram/: RPD.cpp  RPD.h  RPD_callback.cpp  RPD_callback.h  RPD_mesh_builder.cpp  RPD_mesh_builder.h  generic_RPD.h  generic_RPD_cell.cpp  generic_RPD_cell.h  generic_RPD_polygon.cpp  generic_RPD_polygon.h  generic_RPD_utils.h  generic_RPD_vertex.h  predicates.cpp  predicates.h
src/matfp/geogram/mesh/: mesh_sampling.h
src/matfp/geogram/predicates/: kernel.pckh  pck.sh  powerside1.h  powerside1.pck  powerside2.h  powerside2.pck  powerside3.h  powerside3.pck  powerside4.h  powerside4.pck
src/pre/: pre_guiwindow.cpp  pre_guiwindow.h  pre_logger.cpp  pre_main.cpp  pre_meshIO.cpp  pre_meshIO.h  pre_types.h  sharp_feature_detection.cpp  sharp_feature_detection.h
